syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Numbers {
  int64 firstNumber = 1;
  int64 secondNumber = 2;
}

message SumRequest {
  Numbers numbers = 1;
}

message SumResponse {
  int64 sum = 1;
}

service CalculatorService {
  rpc add(SumRequest) returns(SumResponse) {};
}

